--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,15 @@
 spring:
   application:
     name: project_mobile_be
+  datasource:
+    url: jdbc:mysql://localhost:3306/user_crud
+    username: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  logging:
+      level:
+        org.springframework: DEBUG
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
