--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 spring:
   application:
     name: project_mobile_be
+
   datasource:
     url: jdbc:mysql://localhost:3306/mobileproject
     username: "root"
@@ -15,4 +16,5 @@ spring:
       hibernate:
         use_sql_comments: true
         format_sql: true
-
+  server:
+    port: 8080
