--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,6 +37,7 @@ spring:
             enabled: true
           api-docs:
             enabled: true
+
 spring.devtools:
   restart:
     enabled: true  # Kích hoạt tự động tải lại
@@ -44,5 +45,7 @@ spring.devtools:
     spring:
       jackson:
         time-zone: Asia/Ho_Chi_Minh
-
-
+redis:
+    host: 192.168.57.128
+    port: 6379
+    password: ''
