--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
     properties:
+      org.hibernate.envers.store_data_at_delete: true
       hibernate:
         use_sql_comments: true
         format_sql: true
@@ -49,3 +50,9 @@ redis:
     host: 192.168.57.128
     port: 6379
     password: ''
+logging:
+  level:
+    org:
+      springframework:
+        web:
+          socket=DEBUG: INFO
