--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-storage -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.44.1</version>
+		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
