--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,17 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-connector-mysql</artifactId>
+			<version>3.0.2.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 
