--- a/src/database/Dockerfile
+++ b/src/database/Dockerfile
@@ -1,8 +1,8 @@
 FROM mysql:8.0
 
 ENV MYSQL_DATABASE mobileproject
-ENV MYSQL_ROOT_PASSWORD='root123'
+ENV MYSQL_ROOT_PASSWORD root12345
 
-COPY newW_v3.sql /docker-entrypoint-initdb.d/
+COPY web.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 3306
