--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 server:
-  ip: localhost
-  password: ''
+  ip: 192.168.1.27
+  password: 'root12345'
+  port: 8080
 
 
 spring:
@@ -71,13 +72,16 @@ spring.devtools:
   spring:
     jackson:
       time-zone: Asia/Ho_Chi_Minh
+spring.data:
+  redis:
+    host: ${server.ip}
+    port: 6379
+    password: 123456
 
-redis:
-  host: localhost
-  port: 6379
-  password: ''
-  cache:
-    type: redis
+
+
+
+
 
 google:
   cloud:
@@ -92,6 +96,8 @@ logging:
       springframework:
         web: DEBUG
         security: DEBUG
+        data:
+          redis: DEBUG
 
 payment:
   vnPay:
